[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dragon_hunt"
version = "4.0-dev"
authors = [
    { name="Evil Mr Henry", email="evilmrhenry@emhsoft.net" },
]
maintainers = [
    { name="RPINerd", email="" },
]
description = "A simple rogue-like RPG game."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CCPL :: GPLv2",
    "Operating System :: Linux",
]

[project.urls]
Homepage = "https://github.com/RPINerd/dragon_hunt"
Issues = "https://github.com/RPINerd/dragon_hunt/issues"